--- a/package.json
+++ b/package.json
@@ -24,6 +24,18 @@
   },
   "homepage": "https://github.com/Uber5/u5-api-sample#readme",
   "dependencies": {
-    "u5-api-base": "0.0.1"
+    "u5-api-base": "0.0.2"
+  },
+  "devDependencies": {
+    "babel-cli": "6.22.2",
+    "babel-loader": "6.2.10",
+    "babel-plugin-transform-flow-strip-types": "6.22.0",
+    "babel-preset-es2015": "6.22.0",
+    "babel-preset-stage-2": "6.22.0",
+    "flow-bin": "0.38.0",
+    "jest": "18.1.0",
+    "rimraf": "2.5.4",
+    "source-map-support": "0.4.11",
+    "supervisor": "0.12.0"
   }
 }
