--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sample API built using u5-api-base",
   "main": "dist/index.js",
   "scripts": {
+    "dev": "babel-node src",
     "test": "jest"
   },
   "repository": {
@@ -24,7 +25,7 @@
   },
   "homepage": "https://github.com/Uber5/u5-api-sample#readme",
   "dependencies": {
-    "u5-api-base": "0.0.2"
+    "u5-api-base": "0.0.4-0"
   },
   "devDependencies": {
     "babel-cli": "6.22.2",
