--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/Uber5/u5-api-sample#readme",
   "dependencies": {
-    "u5-api-base": "0.0.4-0"
+    "u5-api-base": "0.0.4"
   },
   "devDependencies": {
     "babel-cli": "6.22.2",
